--- a/css/css-reset.css
+++ b/css/css-reset.css
@@ -1,3 +1,5 @@
+/* stylelint-disable selector-list-comma-newline-after */
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -19,9 +21,9 @@ time, mark, audio, video {
     vertical-align: baseline;
 }
 
-/* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
+    /* HTML5 display-role reset for older browsers */
     display: block;
 }
 
@@ -37,8 +39,8 @@ blockquote, q {
     quotes: none;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
+blockquote::before, blockquote::after,
+q::before, q::after {
     content: none;
 }
 
